--- a/src/scss/_common.vars.scss
+++ b/src/scss/_common.vars.scss
@@ -11,6 +11,7 @@ $colors: (
     black800: #171A1C,
     black600: #5D666F,
     black400: #9099A2,
+    black200: #C8CCD0,
     black100: #E3E6E8,
     black30: #F7F7F8,
     red700: #972121,
