--- a/src/views/common/_contact.ejs
+++ b/src/views/common/_contact.ejs
@@ -1,12 +1,14 @@
-<section class="contact c-wrapper">
-    <div class="contact-bg">
-        <h2 class="contact-bg-title c-inter">Contact</h2>
-        <p class="contact-bg-text c-explanation-text">
-            医療における新たな価値創出やコラボレーションについて、
-            <br>ご提案が可能です。お気軽にご相談ください。
-        </p>
-        <a href="#" class="contact-bg-icn c-link">
-            <div class="c-link-icn"></div>
-        </a>
+<section class="contact">
+    <div class="c-wrapper">
+        <div class="contact-bg js-fadein">
+            <h2 class="contact-bg-title c-inter">Contact</h2>
+            <p class="contact-bg-text c-explanation-text">
+                医療における新たな価値創出やコラボレーションについて、
+                <br>ご提案が可能です。お気軽にご相談ください。
+            </p>
+            <a href="#" class="contact-bg-icn c-link">
+                <div class="c-link-icn"></div>
+            </a>
+        </div>
     </div>
 </section>
