--- a/src/views/common/_footer.ejs
+++ b/src/views/common/_footer.ejs
@@ -1,45 +1,47 @@
 <footer class="footer">
-  <div class="footer-logo">
-    <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>index.html" class="footer-logo-img"><img
-        src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/logo_horizontal_footer.svg" alt="TCROSS"></a>
-  </div>
-  <div class="footer-nav c-inter">
-    <nav>
-      <ul>
-        <li><a href="#">Who we are</a></li>
-        <li><a href="#">Our services</a></li>
-        <li><a href="#">Recruit</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
-        <li class="_pc">|</li>
-        <a href="#" class="_pc"><img class="footer-nav-facebook"
-            src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/facebook.svg" alt="faceBook"></a>
-        <a href="#" class="_pc"><img class="footer-nav-x"
-            src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/x.svg" alt="X"></a>
-      </ul>
-    </nav>
-  </div>
-  <div class="footer-sns _sp">
-    <img class="footer-nav-facebook" src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/facebook.svg"
-      alt="faceBook">
-    <img class="footer-nav-x" src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/x.svg" alt="X">
-  </div>
-  <div class="footer-Terms _pc">
-    <a href="#">
-      <%= meta.terms %>
-    </a>
-    <a href="#">
-      <%= meta.privacy %>
-    </a>
-    <p class="c-inter">Copyright © TCROSS</p>
-  </div>
-  <div class="footer-Terms _sp">
-    <a href="#">
-      <%= meta.terms %>
-    </a>
-    <a href="#">
-      <%= meta.privacy %>
-    </a>
-    <p class="c-inter">Copyright © TCROSS</p>
+  <div class="c-wrapper">
+    <div class="footer-logo">
+      <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>index.html" class="footer-logo-img"><img
+          src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/logo_horizontal_footer.svg" alt="TCROSS"></a>
+    </div>
+    <div class="footer-nav c-inter">
+      <nav>
+        <ul>
+          <li><a href="#">Who we are</a></li>
+          <li><a href="#">Our services</a></li>
+          <li><a href="#">Recruit</a></li>
+          <li><a href="#">News</a></li>
+          <li><a href="#">Contact</a></li>
+          <li class="_pc">|</li>
+          <a href="#" class="_pc"><img class="footer-nav-facebook"
+              src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/facebook.svg" alt="faceBook"></a>
+          <a href="#" class="_pc"><img class="footer-nav-x"
+              src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/x.svg" alt="X"></a>
+        </ul>
+      </nav>
+    </div>
+    <div class="footer-sns _sp">
+      <img class="footer-nav-facebook" src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/facebook.svg"
+        alt="faceBook">
+      <img class="footer-nav-x" src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/x.svg" alt="X">
+    </div>
+    <div class="footer-Terms _pc">
+      <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>term.html">
+        <%= meta.terms %>
+      </a>
+      <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>privacy.html">
+        <%= meta.privacy %>
+      </a>
+      <p class="c-inter">Copyright © TCROSS</p>
+    </div>
+    <div class="footer-Terms _sp">
+      <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>term.html">
+        <%= meta.terms %>
+      </a>
+      <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>privacy.html">
+        <%= meta.privacy %>
+      </a>
+      <p class="c-inter">Copyright © TCROSS</p>
+    </div>
   </div>
 </footer>
