--- a/src/views/common/_header.ejs
+++ b/src/views/common/_header.ejs
@@ -1,13 +1,13 @@
 <header class="header">
-  <!-- <div class="header-info">
+  <div class="header-info">
     <div class="header-info-wrapper">
       <div class="header-info-icn"><span></span></div>
       <div class="header-info-txt">
         <p>大切なお知らせ</p>
-        <p class="header-info-txt-sub">サーバーメンテナンスについて</p>
+        <p class="header-info-txt-sub"><a href="#">サーバーメンテナンスについて</a></p>
       </div>
     </div>
-  </div> -->
+  </div>
   <div class="header-nav">
     <div class="header-nav-wapper">
       <h1><a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>index.html" class="header-nav-logo"><img
@@ -15,13 +15,12 @@
       <nav class="header-nav-menu c-inter _pc">
         <ul>
           <li><a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>about.html">Who we are</a></li>
-          <li><a href="#">Our services</a></li>
           <li><a href="#">Recruit</a></li>
           <li><a href="#">News</a></li>
           <li><a href="#" class="_is-contact">Contact</a></li>
-          <li>|</li>
+          <li><span>|</span></li>
           <li class="header-nav-lang">
-            <select id="header-nav-select">
+            <select id="header-nav-select" class="js-lang-select">
               <option value="jp">
                 <%= meta.optionJp %>
               </option>
@@ -32,11 +31,37 @@
         </ul>
       </nav>
       <nav class="_sp">
-        <div class="header-nav-hamburger" id="sp-menu">
+        <div class="header-nav-hamburger" id="menu-open-btn">
           <img src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/menu.svg" alt="menu">
         </div>
       </nav>
 
     </div>
   </div>
+
+  <nav class="menu">
+    <div class="menu-header">
+      <h1><img src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/logo_horizontal.svg" alt="TCROSS">
+      </h1>
+      <div class="menu-header-close" id="menu-close-btn"><img
+          src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/menu_close.svg" alt="menu"></div>
+    </div>
+    <ul>
+      <li><a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>about.html">Who We Are</a></li>
+      <li><a href="#">Recruit</a></li>
+      <li><a href="#">News</a></li>
+      <li><a class="menu-contact" href="#">Contact</a></li>
+      <li class="menu-select">
+        <select id="header-nav-select_sp" class="js-lang-select">
+          <option value="jp">
+            <%= meta.optionJp %>
+          </option>
+          <option value="en" <%=meta.selected %>><%= meta.optionEn %>
+          </option>
+        </select>
+      </li>
+    </ul>
+  </nav>
+
+
 </header>
