--- a/src/views/jp/index.ejs
+++ b/src/views/jp/index.ejs
@@ -1,6 +1,6 @@
 <% let meta={ title: "株式会社テクロス" , description: "トップページの説明" , keywords: "test, bridge" , ogTitle: "ページタイトル" ,
   ogDescription: "ページ説明文" , ogtype: "" , ogUrl: "" , ogImage: "" , ogsiteName: "" , ogLocate: "" , basePath: "../../" ,
-  selected: "" , optionJp: "日本語" , optionEn: "英語" , terms: "利用規約" , privacy: "個人情報保護方針" , lang: "jp/" }; %>
+  selected: "" , optionJp: "JP" , optionEn: "EN" , terms: "利用規約" , privacy: "個人情報保護方針" , lang: "jp/" }; %>
   <%- include('/common/_metaCreate', { meta }) %>
     <!DOCTYPE html>
     <html lang="ja">
@@ -8,21 +8,53 @@
 
       <body class="page-top" data-page="../en">
         <%- include('/common/_header', { meta }) %>
+
           <section class="top-hero">
             <div class="top-hero-swiper">
               <div class="top-hero-swiper-wrapper">
-                <div class="top-hero-swiper-wrapperSlide"><img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg"
-                    alt="スライド 1"></div>
-                <div class="top-hero-swiper-wrapperSlide"><img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg"
-                    alt="スライド 2"></div>
-                <div class="top-hero-swiper-wrapperSlide"><img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg"
-                    alt="スライド 3"></div>
-                <div class="top-hero-swiper-wrapperSlide"><img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg"
-                    alt="スライド 4"></div>
-                <div class="top-hero-swiper-wrapperSlide"><img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg"
-                    alt="スライド 5"></div>
-                <div class="top-hero-swiper-wrapperSlide"><img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg"
-                    alt="スライド 6"></div>
+
+                <div class="top-hero-swiper-wrapperSlide">
+                  <picture>
+                    <source srcset="../../<%= ASSET_PATH %>asset/img/top/hero_sp.jpg" media="(max-width: 450px)">
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="スライド 1">
+                  </picture>
+                </div>
+
+                <div class="top-hero-swiper-wrapperSlide">
+                  <picture>
+                    <source srcset="../../<%= ASSET_PATH %>asset/img/top/hero_sp.jpg" media="(max-width: 450px)">
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="スライド 2">
+                  </picture>
+                </div>
+
+                <div class="top-hero-swiper-wrapperSlide">
+                  <picture>
+                    <source srcset="../../<%= ASSET_PATH %>asset/img/top/hero_sp.jpg" media="(max-width: 450px)">
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="スライド 3">
+                  </picture>
+                </div>
+
+                <div class="top-hero-swiper-wrapperSlide">
+                  <picture>
+                    <source srcset="../../<%= ASSET_PATH %>asset/img/top/hero_sp.jpg" media="(max-width: 450px)">
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="スライド 4">
+                  </picture>
+                </div>
+
+                <div class="top-hero-swiper-wrapperSlide">
+                  <picture>
+                    <source srcset="../../<%= ASSET_PATH %>asset/img/top/hero_sp.jpg" media="(max-width: 450px)">
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="スライド 5">
+                  </picture>
+                </div>
+
+                <div class="top-hero-swiper-wrapperSlide">
+                  <picture>
+                    <source srcset="../../<%= ASSET_PATH %>asset/img/top/hero_sp.jpg" media="(max-width: 450px)">
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="スライド 6">
+                  </picture>
+                </div>
+
               </div>
 
               <div class="top-hero-swiper-controls">
@@ -30,15 +62,13 @@
                 <div class="top-hero-swiper-controlsPagination"></div>
               </div>
 
-
               <div class="top-hero-swiper-heading">
                 <h2 class="top-hero-swiper-headingTitle">
                   <p>持続可能な<br />医療へと変革する<br />プロフェッショナル</p>
                 </h2>
                 <div class="top-hero-swiper-headingText">
-                  <p>テクロスは、医療業界のあらゆるステークホルダーを<br class="_sp" />支援する企業です。</p>
-                  <p>営業やマーケティングの領域にサイエンスの視点を取り入れ、</p>
-                  <p>医療産業の持続的な発展に寄与することを<br class="_sp" />目指しています。</p>
+                  <p>テクロスは、医療業界のあらゆるステークホルダーを支援する企業です。</p>
+                  <p>営業やマーケティングの領域にサイエンスの視点を取り入れ、<br class="_pc" />医療産業の持続的な発展に寄与することを目指しています。</p>
                 </div>
               </div>
               <div class="top-hero-swiper-link">
@@ -53,12 +83,12 @@
           <section class="top-features c-wrapper">
             <div class="top-features-news">
               <div class="top-features-news-wrapper">
-                <p class="top-features-news-wrapperTitle">Features</p>
-                <div class="top-features-news-wrapperText">
+                <p class="top-features-news-wrapperTitle js-fadein">Features</p>
+                <div class="top-features-news-wrapperText js-fadein">
                   <p>2025 .12.28</p>
                   <a href="#">新規導入薬を最初に処方する医師（アーリーアダプター）の特定を可能にするInsighTCROSS® EarlyScriptersを発表します</a>
                 </div>
-                <div class="top-features-news-wrapperText">
+                <div class="top-features-news-wrapperText js-fadein">
                   <p>2025 .12.28</p>
                   <a href="#">希少疾患領域においてInsighTCROSS®のトライアルでデータドリブンな新しい営業戦略の可能性を実証しました</a>
                 </div>
@@ -68,62 +98,81 @@
 
           <section class="our-services">
             <div class="our-services-wrapper">
-              <h2 class="our-services-wrapper-title c-inter"><span class="c-title-color">Our</span> Services</h2>
-              <p>医療の基盤を支えるEvidenceを、未来へつながる医療の力へ。その変革に必要な専門領域を揃えています。</p>
+              <h2 class="our-services-wrapper-title c-inter js-fadein"><span class="c-title-color">Our</span> Services</h2>
+              <p class="js-fadein">医療の基盤を支えるEvidenceを、未来へつながる医療の力へ。その変革に必要な専門領域を揃えています。</p>
               <div class="our-services-wrapper-pickup">
-                <div class="our-services-wrapper-pickupContent">
-                  <div class="our-services-wrapper-pickupContentText">
-                    <h3>データサイエンス事業</h3>
-                    <p>医療領域における市場調査、市場分析から、マーケティング戦略の立案を含むコンサルティングを行います。 医療現場と企業をつなぐための市場のunmet
-                      needsの探索、製品導入後のマーケティング活動、販売活動の支援、研究会の組織化などを総合的にサポートします。</p>
-                    <a href="#">
-                      <p class="our-services-wrapper-pickupContentMore c-case-list-more _pc">もっと見る</p>
-                    </a>
-                  </div>
-                  <div>
-                    <img src="../../<%= ASSET_PATH %>asset/img/top/data-science.jpg" alt="データサイエンス事業">
-                  </div>
+                <div class="our-services-wrapper-pickupContent js-fadein">
+                  <a href="https://insightcross.com/" target="_blank">
+                    <div class="our-services-wrapper-pickupContentText">
+                      <a href="https://insightcross.com/" target="_blank">
+                        <h3>データサイエンス事業</h3>
+                        <p>医療領域における市場調査、市場分析から、マーケティング戦略の立案を含むコンサルティングを行います。 医療現場と企業をつなぐための市場のunmet
+                          needsの探索、製品導入後のマーケティング活動、販売活動の支援、研究会の組織化などを総合的にサポートします。</p>
+                        <p class="our-services-wrapper-pickupContentMore c-case-list-more _pc">もっと見る</p>
+                        <p class="our-services-wrapper-pickupContentTextLine">サービスの詳細<span
+                            class="c-link-short-transition"></span></p>
+                      </a>
+                    </div>
+                    <div>
+                      <a href="https://insightcross.com/" target="_blank">
+                        <img src="../../<%= ASSET_PATH %>asset/img/top/data-science.jpg" alt="データサイエンス事業">
+                      </a>
+                    </div>
                 </div>
-                <div class="our-services-wrapper-pickupContent _reverse">
+                <div class="our-services-wrapper-pickupContent _reverse js-fadein">
                   <div class="our-services-wrapper-pickupContentText">
-                    <h3>Webデジタルマーケティング事業</h3>
-                    <p>循環器領域の専門サイト「TCROSS NEWS®」を通じて、医薬品・医療機器を対象とした広範囲のプロモーション活動をお手伝いします。
-                      Web広告、学術集会や製品に関連するサイトの制作、管理を請け負います。</p>
                     <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>services/marketing.html">
-                      <p class="our-services-wrapper-pickupContentMore c-case-list-more _pc">もっと見る</p>
+                      <h3>Webデジタルマーケティング事業</h3>
+                      <p>循環器領域の専門サイト「TCROSS NEWS®」を通じて、医薬品・医療機器を対象とした広範囲のプロモーション活動をお手伝いします。
+                        Web広告、学術集会や製品に関連するサイトの制作、管理を請け負います。</p>
+                      <p class="our-services-wrapper-pickupContentMore c-transition-list-more _pc">もっと見る</p>
+                      <p class="our-services-wrapper-pickupContentTextLine">サービスの詳細<span
+                          class="c-link-short-arrow"></span></p>
                     </a>
                   </div>
                   <div>
-                    <img src="../../<%= ASSET_PATH %>asset/img/top/data-science.jpg" alt="データサイエンス事業">
+                    <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>services/marketing.html">
+                      <img src="../../<%= ASSET_PATH %>asset/img/top/digital-marketing.jpg" alt="Webデジタルマーケティング事業">
+                    </a>
                   </div>
                 </div>
               </div>
               <div class="our-services-wrapper-list">
-                <div class="our-services-wrapper-list-busines">
-                  <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>services/event.html"><img
-                      src="../../<%= ASSET_PATH %>asset/img/top/our-services3.jpg" alt="イベントコーディネート事業"></a>
+                <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>services/event.html"
+                  class="our-services-wrapper-list-busines js-fadein">
+                  <div>
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/our-services3.jpg" alt="イベントコーディネート事業">
+                  </div>
                   <h3>イベントコーディネート事業</h3>
                   <p>循環器領域の専門サイト「TCROSS NEWS®」を運営し、最新情報の提供を行っています。
                     国内外における医学領域の学術集会や講演会の取材やインタビューなどから、専門性の高い記事を制作します。</p>
-                </div>
+                  <p class="our-services-wrapper-list-businesLine">サービスの詳細<span class="c-link-short-arrow"></span></p>
+                </a>
 
-                <div class="our-services-wrapper-list-busines">
-                  <a href="#"><img src="../../<%= ASSET_PATH %>asset/img/top/our-services5.jpg"
-                      alt="メディアコミュニケーション事業"></a>
+                <a href="https://www.tcross.co.jp/" class="our-services-wrapper-list-busines js-fadein" target="_blank">
+                  <div>
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/our-services5.jpg" alt="メディアコミュニケーション事業">
+                  </div>
                   <h3>メディアコミュニケーション事業</h3>
                   <p>循環器領域の専門サイト「TCROSS NEWS®」を運営し、最新情報の提供を行っています。
                     国内外における医学領域の学術集会や講演会の取材やインタビューなどから、専門性の高い記事を制作します。</p>
-                </div>
+                  <p class="our-services-wrapper-list-businesLine">TCROSS NEWS<span
+                      class="c-link-short-transition"></span>
+                  </p>
+                </a>
 
-                <div class="our-services-wrapper-list-busines">
-                  <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>services/clinical.html"><img
-                      src="../../<%= ASSET_PATH %>asset/img/top/our-services2.jpg" alt="臨床研究サポート事業"></a>
+                <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>services/clinical.html"
+                  class="our-services-wrapper-list-busines js-fadein">
+                  <div>
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/our-services2.jpg" alt="臨床研究サポート事業">
+                  </div>
                   <h3>臨床研究サポート事業</h3>
                   <p>循環器領域の専門サイト「TCROSS NEWS®」を運営し、最新情報の提供を行っています。
                     国内外における医学領域の学術集会や講演会の取材やインタビューなどから、専門性の高い記事を制作します。</p>
-                </div>
+                  <p class="our-services-wrapper-list-businesLine">サービスの詳細<span class="c-link-short-arrow"></span></p>
+                </a>
 
-                <div class="our-services-wrapper-list-busines">
+                <div class="our-services-wrapper-list-busines js-fadein">
                   <div><img src="../../<%= ASSET_PATH %>asset/img/top/our-services6.jpg" alt="コンサルティング事業"></div>
                   <h3>コンサルティング事業</h3>
                   <p>循環器領域の専門サイト「TCROSS NEWS®」を運営し、最新情報の提供を行っています。
@@ -134,8 +183,8 @@
           </section>
 
           <section class="recruit c-wrapper">
-            <div class="recruit-bg"></div>
-            <div class="recruit-explanation">
+            <div class="recruit-bg js-fadein"></div>
+            <div class="recruit-explanation js-fadein">
               <p class="recruit-explanation-section c-inter">Recruit</p>
               <h2 class="c-explanation-title">
                 テクロスは<br class="_pc" />医療業界の発展を<br />一緒に目指す仲間を<br class="_pc" />募集しています
@@ -157,19 +206,24 @@
 
           <section class="news c-wrapper">
             <div class="news-wrapper">
-              <p class="news-wrapper-title">News</p>
-              <div class="news-wrapper-text">
+              <p class="news-wrapper-title js-fadein">News</p>
+              <div class="news-wrapper-text js-fadein">
                 <p>2025 .12.25</p>
                 <a href="#">MEDICA 2025にてInsighTCROSS®およびデータサイエンス事業について展示いたします</a>
               </div>
-              <div class="news-wrapper-text">
+              <div class="news-wrapper-text js-fadein">
                 <p>2025 .11.16</p>
                 <a href="#">InsighTCROSS®が、ものづくり補助金〈グローバル展開型〉に採択されました</a>
               </div>
-              <div class="news-wrapper-text">
+              <div class="news-wrapper-text js-fadein">
                 <p>2025 .10.01</p>
                 <a href="#">
                   あのイーハトーヴォのすきとおった風、夏でも底に冷たさをもつ青いそら、うつくしい森で飾られたモリーオ市、郊外のぎらぎら<br />ひかる草の波。あのイーハトーヴォのすきとおった風、夏でも底に冷たさをもつ青いそら、うつくしい森で飾られたモリーオ市、<br />郊外のぎらぎらひかる草の波。
+                </a>
+              </div>
+              <div class="news-wrapper-link js-fadein">
+                <a href="#" class="c-link-long c-inter" target="_blank">
+                  <p>News 一覧</p>
                 </a>
               </div>
             </div>
@@ -178,6 +232,7 @@
           <%- include('/common/_contact') %>
             <%- include('/common/_footer', { meta }) %>
               <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+
               <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
               <script src="<%= meta.basePath %><%= ASSET_PATH %>asset/js/main.js"></script>
       </body>
